pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints13.pkl
name: String = "Bub"

foo: String(this == "Hello, \(name)") = "Hello, Patty" 
